<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/menu"
        android:src="@drawable/menu_home"
        android:background="@drawable/card_back_btn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/home_assest1"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="-10dp"
        android:rotation="-10"
        android:contentDescription="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvHello"
        android:text="@string/hello"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        android:layout_marginStart="23dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFoodie"
        android:text="@string/foodie"
        android:textSize="24sp"
        android:textColor="@color/purple_500"
        android:fontFamily="@font/poppins_black"
        android:layout_marginStart="7dp"
        app:layout_constraintStart_toEndOf="@+id/tvHello"
        app:layout_constraintTop_toBottomOf="@+id/menu"/>

    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvString"
        android:text="@string/which_indian_food"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#424242"
        android:fontFamily="@font/poppins_semi_bold"
        android:layout_marginStart="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:id="@+id/etSearch"
        android:background="@drawable/searchview"
        android:hint="@string/search_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:textSize="17sp"
        android:textColor="#5A5858"
        android:inputType="none"
        android:focusable="false"
        android:paddingStart="45dp"
        android:fontFamily="@font/poppins_light"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvString"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/search_ic"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/hello"
        app:layout_constraintTop_toTopOf="@+id/etSearch"
        app:layout_constraintStart_toStartOf="@+id/etSearch"
        app:layout_constraintBottom_toBottomOf="@+id/etSearch"
        app:tint="#5A5858" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCategories"
        android:text="@string/categories"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="23dp"
        android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:id="@+id/rvCategory"
        android:layout_marginTop="30dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        tools:listitem="@layout/item_view_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategories"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPopCat"
        android:text="Popular Categories"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/rvCategory"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rv_popular_cat"
        tools:listitem="@layout/item_popular_categories"
        app:layout_constraintTop_toBottomOf="@+id/tvPopCat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>