<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity"
    app:layoutDescription="@xml/activity_recipe_scene">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:id="@+id/mainImage"
        android:src="@drawable/pizza_sample"
        android:background="#f6f6f6"
        android:scaleType="centerCrop"
        android:hapticFeedbackEnabled="true"
        android:contentDescription="@string/hello"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/shade"
        android:src="@drawable/image_btm_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/mainImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnBack"
        android:src="@drawable/back_icon"
        android:padding="3dp"
        android:background="@drawable/card_back_btn"
        android:foregroundGravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btnResize"
        android:src="@drawable/full_size_ic"
        android:background="@color/black_light"
        android:padding="3dp"
        app:tint="@color/white"
        android:contentDescription="@string/hello"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/relativeLayout"
        android:background="@drawable/card_recipe"
        android:layout_marginTop="-20dp"
        app:layout_constraintTop_toBottomOf="@id/mainImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:text="This is a Title Text"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/clockimage"
            app:tint="#019267"
            android:src="@drawable/clock_icon"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvTitle"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDuration"
            android:text="50 Min"
            android:textSize="15sp"
            android:gravity="center"
            android:padding="2dp"
            android:fontFamily="@font/poppins_light"
            android:layout_toEndOf="@+id/clockimage"
            android:layout_below="@id/tvTitle"
            android:layout_marginStart="5dp" />


        <Button
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:id="@+id/btnIngredients"
            android:text="@string/ingredients"
            android:fontFamily="@font/poppins_semi_bold"
            android:background="@drawable/btn_ing"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:layout_marginStart="34dp"
            android:layout_below="@+id/tvTitle"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/svIng"
            android:layout_below="@id/btnIngredients"
            android:padding="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ingData"
                android:gravity="start"
                android:lineSpacingExtra="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_light"/>


        </ScrollView>

        <Button
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:id="@+id/btnSteps"
            android:text="@string/steps"
            android:fontFamily="@font/poppins_semi_bold"
            android:background="@drawable/btn_ing"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="34dp"
            android:layout_below="@+id/tvTitle"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/svSteps"
            android:visibility="gone"
            android:layout_below="@id/btnIngredients"
            android:padding="10dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stepsData"
                android:gravity="start"
                android:lineSpacingExtra="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_light"/>

        </ScrollView>

    </RelativeLayout>


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/goUp"
        android:src="@drawable/scroll_up"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/hello"
        app:layout_constraintTop_toBottomOf="@+id/mainImage"
        app:layout_constraintEnd_toEndOf="parent"/>





</androidx.constraintlayout.motion.widget.MotionLayout>